{
  "version": 4,
  "terraform_version": "1.3.2",
  "serial": 108,
  "lineage": "448eeb6c-e9bf-5cc2-9257-0be72d9daea3",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "CK_jump_server1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "status": "tainted",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0b5df848226550db1",
            "arn": "arn:aws:ec2:us-east-1:367537373384:instance/i-087182e18e3f2224f",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-087182e18e3f2224f",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "CK_terrakey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-05d1657737ed01028",
            "private_dns": "ip-10-100-0-9.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.100.0.9",
            "public_dns": "ec2-100-26-61-187.compute-1.amazonaws.com",
            "public_ip": "100.26.61.187",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0b7ae5448de8b32d0",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-058d47670dd1f8df2",
            "tags": {
              "Name": "CJ-Jump-Server1"
            },
            "tags_all": {
              "Name": "CJ-Jump-Server1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0e55d637ee3a10c18"
            ]
          },
          "dependencies": [
            "aws_key_pair.terraform_key",
            "aws_security_group.ck_sg",
            "aws_subnet.ck_vpc_subnet",
            "aws_vpc.ck_vpc",
            "data.aws_ami.CK_Jump_Server"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "ck_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:367537373384:internet-gateway/igw-09d24825b57c06677",
            "id": "igw-09d24825b57c06677",
            "owner_id": "367537373384",
            "tags": {
              "Name": "CK-IGW"
            },
            "tags_all": {
              "Name": "CK-IGW"
            },
            "vpc_id": "vpc-047392ed9175f57c5"
          },
          "dependencies": [
            "aws_vpc.ck_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "ck_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-09d24825b57c06677",
            "id": "r-rtb-0b860c02fb44916931080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0b860c02fb4491693",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.ck_igw",
            "aws_route_table.ck_pub_rt",
            "aws_vpc.ck_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "ck_pub_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:367537373384:route-table/rtb-0b860c02fb4491693",
            "id": "rtb-0b860c02fb4491693",
            "owner_id": "367537373384",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-09d24825b57c06677",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "CK_Pub_RT"
            },
            "tags_all": {
              "Name": "CK_Pub_RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-047392ed9175f57c5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.ck_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "ck_pub_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-013809320c3f19f4a",
            "route_table_id": "rtb-0b860c02fb4491693",
            "subnet_id": "subnet-058d47670dd1f8df2"
          },
          "dependencies": [
            "aws_route_table.ck_pub_rt",
            "aws_subnet.ck_vpc_subnet",
            "aws_vpc.ck_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ck_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:367537373384:security-group/sg-0e55d637ee3a10c18",
            "description": "ck security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e55d637ee3a10c18",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "CK_SG",
            "name_prefix": "",
            "owner_id": "367537373384",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-047392ed9175f57c5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.ck_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "ck_vpc_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:367537373384:subnet/subnet-058d47670dd1f8df2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.100.0.0/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-058d47670dd1f8df2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "367537373384",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "CK-SN1"
            },
            "tags_all": {
              "Name": "CK-SN1"
            },
            "vpc_id": "vpc-047392ed9175f57c5"
          },
          "dependencies": [
            "aws_vpc.ck_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "ck_vpc_subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:367537373384:subnet/subnet-0bad3d1021bc18eb1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.100.0.16/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bad3d1021bc18eb1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "367537373384",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "CK-SN2"
            },
            "tags_all": {
              "Name": "CK-SN2"
            },
            "vpc_id": "vpc-047392ed9175f57c5"
          },
          "dependencies": [
            "aws_vpc.ck_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "ck_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:367537373384:vpc/vpc-047392ed9175f57c5",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.100.0.0/24",
            "default_network_acl_id": "acl-0d6569b9d0ae4824b",
            "default_route_table_id": "rtb-054be029945e607ad",
            "default_security_group_id": "sg-0940b860b1d12af79",
            "dhcp_options_id": "dopt-05eaedfba306b6205",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-047392ed9175f57c5",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-054be029945e607ad",
            "owner_id": "367537373384",
            "tags": {
              "Name": "CKVPC"
            },
            "tags_all": {
              "Name": "CKVPC"
            }
          }
        }
      ]
    }
  ]
}